internal/predicate/testdata/reject/computed_table_key.lua
has_relation(entity, 'x', {[1]='y'})
